--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Cấu hình JWT với RSA
+jwt.expiration=86400000
+jwt.refresh-expiration=604800000
+
+# Cấu hình Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=123456
+spring.data.redis.timeout=2000ms
+spring.data.redis.database=0
+
 
 
