--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,18 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình JPA (Hibernate)
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# config pagination start page = 1
+spring.data.web.pageable.one-indexed-parameters=true
+
+# Database Seeding Configuration
+app.seeding.enabled=true
+app.seeding.department.enabled=true
+app.seeding.department.force=false
 
 # Cấu hình JWT với RSA
 jwt.expiration=86400000
