--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,10 @@ spring.data.redis.password=123456
 spring.data.redis.timeout=2000ms
 spring.data.redis.database=0
 
+# Cấu hình upload file
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+
 
 
