--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,21 +15,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # config pagination start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
 
-# Cấu hình JWT với RSA
-jwt.expiration=86400000
-jwt.refresh-expiration=604800000
-
-# Cấu hình Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.password=123456
-spring.data.redis.timeout=2000ms
-spring.data.redis.database=0
-
 # Cấu hình upload file
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
+# Cấu hình JWT với RSA - 1 ngày = 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 86,400,000 ms - 1 tuần = 7 ngày × 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 604,800,000 ms
+jwt.access-token.expiration=86400000
+jwt.refresh-token.expiration=604800000
 
-
+# Đường dẫn đến RSA keys
+jwt.private-key-path=classpath:keys/private_key.pem
+jwt.public-key-path=classpath:keys/public_key.pem
