--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ jwt.refresh-token.expiration=604800000
 # Đường dẫn đến RSA keys
 jwt.private-key-path=classpath:keys/private_key.pem
 jwt.public-key-path=classpath:keys/public_key.pem
+
+# Cấu hình Redis
+# Cấu hình Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=123456
+spring.data.redis.timeout=2000ms
+spring.data.redis.database=0
