--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình JPA (Hibernate)
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -29,9 +29,17 @@ jwt.private-key-path=classpath:keys/private_key.pem
 jwt.public-key-path=classpath:keys/public_key.pem
 
 # Cấu hình Redis
-# Cấu hình Redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=123456
 spring.data.redis.timeout=2000ms
 spring.data.redis.database=0
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ntanhquan.sly@gmail.com
+spring.mail.password=muszahcaqthignup
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
