--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=InnovationManagementSystem_BE
 
-# Cấu hình PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/innovation_db
-spring.datasource.username=postgres
-spring.datasource.password=123456
+# Cấu hình PostgreSQL Online (Aiven)
+spring.datasource.url=jdbc:postgresql://pg-36e5c78a-ntanhquan-4d00.j.aivencloud.com:14426/defaultdb?sslmode=require
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình JPA (Hibernate)
@@ -11,6 +11,11 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Cấu hình SSL cho PostgreSQL
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=fasle
+spring.jpa.properties.hibernate.connection.ssl=true
+spring.jpa.properties.hibernate.connection.sslmode=require
 
 # config pagination start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
@@ -28,12 +33,19 @@ jwt.refresh-token.expiration=604800000
 jwt.private-key-path=classpath:keys/private_key.pem
 jwt.public-key-path=classpath:keys/public_key.pem
 
-# Cấu hình Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.password=123456
-spring.data.redis.timeout=2000ms
+# Cấu hình Redis Online (Redis Cloud)
+spring.data.redis.host=redis-15098.c244.us-east-1-2.ec2.redns.redis-cloud.com
+spring.data.redis.port=15098
+spring.data.redis.username=default
+spring.data.redis.password=MJ2NqusB7OsAkpE2QTK6kPqNAsSbcER6
+spring.data.redis.timeout=30s
 spring.data.redis.database=0
+spring.data.redis.ssl.enabled=false
+
+# Logging hiển thị kết nối Redis
+logging.level.org.springframework.data.redis=DEBUG
+logging.level.io.lettuce.core=DEBUG
+logging.level.vn.edu.iuh.fit.innovationmanagementsystem_be.config=INFO
 
 # Email Configuration
 spring.mail.host=smtp.gmail.com
