--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình JPA (Hibernate)
-spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
