Implement MinIO configuration and client setup; remove DocToHtmlController and update application properties for file upload limits

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Cấu hình JPA (Hibernate)
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.connection.sslmode=require
 spring.data.web.pageable.one-indexed-parameters=true
 
 # Cấu hình upload file
-spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
@@ -54,4 +54,10 @@ spring.mail.username=ntanhquan.sly@gmail.com
 spring.mail.password=muszahcaqthignup
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# MinIO Configuration
+minio.endpoint=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket-name=innovation-files
 
