--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- ===== API DOCUMENTATION ===== -->
+
+		<!-- SpringDoc OpenAPI - Swagger UI & OpenAPI 3 documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
