--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,7 @@ spring.jpa.properties.hibernate.connection.sslmode=require
 # config pagination start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
 
-# Cấu hình upload file
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=50MB
-spring.servlet.multipart.enabled=true
+
 
 # Cấu hình JWT với RSA - 1 ngày = 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 86,400,000 ms - 1 tuần = 7 ngày × 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 604,800,000 ms
 jwt.access-token.expiration=86400000
@@ -55,9 +52,27 @@ spring.mail.password=muszahcaqthignup
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Cấu hình upload file
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
+
 # MinIO Configuration
 minio.endpoint=http://localhost:9000
 minio.access-key=minioadmin
 minio.secret-key=minioadmin
 minio.bucket-name=innovation-files
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.display-operation-id=false
+springdoc.swagger-ui.default-models-expand-depth=1
+springdoc.swagger-ui.default-model-expand-depth=1
 
