Update  FormatRestResponse to skip formatting for specific file conversion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.data.redis.database=0
 spring.data.redis.ssl.enabled=false
 
 # Logging hiển thị kết nối Redis
-logging.level.org.springframework.data.redis=DEBUG
-logging.level.io.lettuce.core=DEBUG
+logging.level.org.springframework.data.redis=INFO
+logging.level.io.lettuce.core=INFO
 logging.level.vn.edu.iuh.fit.innovationmanagementsystem_be.config=INFO
 
 # Email Configuration
