--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,26 +19,25 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-
-  libreoffice:
-    image: lscr.io/linuxserver/libreoffice:latest
-    container_name: libreoffice
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Asia/Ho_Chi_Minh
-    volumes:
-      - libreoffice_data:/config
-      - /tmp:/tmp # Mount temp directory for file conversion
-    restart: unless-stopped
-    command: >
-      sh -c "
-        echo 'LibreOffice container started' &&
-        tail -f /dev/null
-      "
+  # libreoffice:
+  #   image: lscr.io/linuxserver/libreoffice:latest
+  #   container_name: libreoffice
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - TZ=Asia/Ho_Chi_Minh
+  #   volumes:
+  #     - libreoffice_data:/config
+  #     - /tmp:/tmp # Mount temp directory for file conversion
+  #   restart: unless-stopped
+  #   command: >
+  #     sh -c "
+  #       echo 'LibreOffice container started' &&
+  #       tail -f /dev/null
+  #     "
 
 volumes:
   minio_data:
     driver: local
-  libreoffice_data:
-    driver: local
+  # libreoffice_data:
+  #   driver: local
