--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.jpa.properties.hibernate.connection.sslmode=require
 spring.data.web.pageable.one-indexed-parameters=true
 
 # Cấu hình JWT với RSA - 1 ngày = 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 86,400,000 ms - 1 tuần = 7 ngày × 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 604,800,000 ms
-jwt.access-token.expiration=86400000
-jwt.refresh-token.expiration=604800000
+jwt.access-token.expiration=86400000000
+jwt.refresh-token.expiration=604800000000
 
 # Đường dẫn đến RSA keys
 jwt.private-key-path=classpath:keys/private_key.pem
@@ -65,4 +65,6 @@ minio.bucket-name=innovation-files
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
+
+server.port=${PORT:8080}
 
