--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=InnovationManagementSystem_BE
 
-# Cấu hình PostgreSQL Online (Aiven)
-spring.datasource.url=jdbc:postgresql://pg-36e5c78a-ntanhquan-4d00.j.aivencloud.com:14426/defaultdb?sslmode=require
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
+# Cấu hình PostgreSQL
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/innovation_management}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:InnovationDB2024!Secure}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Cấu hình PostgreSQL Online (Aiven)
+# spring.datasource.url=jdbc:postgresql://pg-36e5c78a-ntanhquan-4d00.j.aivencloud.com:14426/defaultdb?sslmode=require
+# spring.datasource.username=avnadmin
+# spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
+
+# Cấu hình SSL cho PostgreSQL - Tự động dựa trên URL
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+spring.jpa.properties.hibernate.connection.ssl=${SPRING_DATASOURCE_SSL:false}
+spring.jpa.properties.hibernate.connection.sslmode=${SPRING_DATASOURCE_SSLMODE:disable}
 
 # Cấu hình JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
@@ -12,41 +22,42 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Cấu hình SSL cho PostgreSQL
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=fasle
-spring.jpa.properties.hibernate.connection.ssl=true
-spring.jpa.properties.hibernate.connection.sslmode=require
-
 # config pagination start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
 
 # Cấu hình JWT với RSA - 1 ngày = 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 86,400,000 ms - 1 tuần = 7 ngày × 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 604,800,000 ms
-jwt.access-token.expiration=86400000000
-jwt.refresh-token.expiration=604800000000
+jwt.access-token.expiration=8640000000
+jwt.refresh-token.expiration=60480000000
 
 # Đường dẫn đến RSA keys
 jwt.private-key-path=classpath:keys/private_key.pem
 jwt.public-key-path=classpath:keys/public_key.pem
 
-# Cấu hình Redis Online (Redis Cloud)
-spring.data.redis.host=redis-15098.c244.us-east-1-2.ec2.redns.redis-cloud.com
-spring.data.redis.port=15098
-spring.data.redis.username=default
-spring.data.redis.password=MJ2NqusB7OsAkpE2QTK6kPqNAsSbcER6
+# Cấu hình Redis
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
+spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME:}
+spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD:Redis2024!SecureCache}
 spring.data.redis.timeout=30s
-spring.data.redis.database=0
-spring.data.redis.ssl.enabled=false
+spring.data.redis.database=${SPRING_DATA_REDIS_DATABASE:0}
+spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL:false}
+
+# Cấu hình Redis Online (Redis Cloud)
+# spring.data.redis.host=redis-15098.c244.us-east-1-2.ec2.redns.redis-cloud.com
+# spring.data.redis.port=15098
+# spring.data.redis.username=default
+# spring.data.redis.password=MJ2NqusB7OsAkpE2QTK6kPqNAsSbcER6
 
 # Logging hiển thị kết nối Redis
 logging.level.org.springframework.data.redis=INFO
 logging.level.io.lettuce.core=INFO
 logging.level.vn.edu.iuh.fit.innovationmanagementsystem_be.config=INFO
 
-# Email Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=ntanhquan.sly@gmail.com
-spring.mail.password=muszahcaqthignup
+# Email Configuration - Sử dụng biến môi trường cho production
+spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${SPRING_MAIL_PORT:587}
+spring.mail.username=${SPRING_MAIL_USERNAME:ntanhquan.sly@gmail.com}
+spring.mail.password=${SPRING_MAIL_PASSWORD:muszahcaqthignup}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -55,11 +66,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
-# MinIO Configuration
-minio.endpoint=http://localhost:9000
-minio.access-key=minioadmin
-minio.secret-key=minioadmin
-minio.bucket-name=innovation-files
+# MinIO Configuration - Sử dụng biến môi trường cho production
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
+minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
+minio.secret-key=${MINIO_SECRET_KEY:MinIO2024!SecureStorage}
+minio.bucket-name=${MINIO_BUCKET_NAME:innovation-files}
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
