--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,14 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<!-- Spring Dotenv - Load environment variables from .env file -->
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
