--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,81 +1,63 @@
 spring.application.name=InnovationManagementSystem_BE
 
-# Cấu hình PostgreSQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/innovation_management}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:InnovationDB2024!Secure}
+# PostgreSQL
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Cấu hình PostgreSQL Online (Aiven)
-# spring.datasource.url=jdbc:postgresql://pg-36e5c78a-ntanhquan-4d00.j.aivencloud.com:14426/defaultdb?sslmode=require
-# spring.datasource.username=avnadmin
-# spring.datasource.password=AVNS_k9PyGGuWOL5SWbywVE6
+# PostgreSQL SSL
+spring.jpa.properties.hibernate.connection.ssl=${SPRING_DATASOURCE_SSL}
+spring.jpa.properties.hibernate.connection.sslmode=${SPRING_DATASOURCE_SSLMODE}
 
-# Cấu hình SSL cho PostgreSQL - Tự động dựa trên URL
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
-spring.jpa.properties.hibernate.connection.ssl=${SPRING_DATASOURCE_SSL:false}
-spring.jpa.properties.hibernate.connection.sslmode=${SPRING_DATASOURCE_SSLMODE:disable}
-
-# Cấu hình JPA (Hibernate)
+# JPA
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# config pagination start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
 
-# Cấu hình JWT với RSA - 1 ngày = 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 86,400,000 ms - 1 tuần = 7 ngày × 24 giờ × 60 phút × 60 giây × 1000 milliseconds = 604,800,000 ms
-jwt.access-token.expiration=86400000
-jwt.refresh-token.expiration=604800000
-
-# Đường dẫn đến RSA keys
+# JWT
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
 jwt.private-key-path=classpath:keys/private_key.pem
 jwt.public-key-path=classpath:keys/public_key.pem
 
-# Cấu hình Redis
-spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
-spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
-spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME:}
-spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD:Redis2024!SecureCache}
+# Redis
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT}
+spring.data.redis.username=${SPRING_DATA_REDIS_USERNAME}
+spring.data.redis.password=${SPRING_DATA_REDIS_PASSWORD}
 spring.data.redis.timeout=30s
-spring.data.redis.database=${SPRING_DATA_REDIS_DATABASE:0}
-spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL:false}
+spring.data.redis.database=${SPRING_DATA_REDIS_DATABASE}
+spring.data.redis.ssl.enabled=${SPRING_DATA_REDIS_SSL}
 
-# Cấu hình Redis Online (Redis Cloud)
-# spring.data.redis.host=redis-15098.c244.us-east-1-2.ec2.redns.redis-cloud.com
-# spring.data.redis.port=15098
-# spring.data.redis.username=default
-# spring.data.redis.password=MJ2NqusB7OsAkpE2QTK6kPqNAsSbcER6
-
-# Logging hiển thị kết nối Redis
+# Logging Redis
 logging.level.org.springframework.data.redis=INFO
 logging.level.io.lettuce.core=INFO
 logging.level.vn.edu.iuh.fit.innovationmanagementsystem_be.config=INFO
 
-# Email Configuration - Sử dụng biến môi trường cho production
-spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${SPRING_MAIL_PORT:587}
-spring.mail.username=${SPRING_MAIL_USERNAME:ntanhquan.sly@gmail.com}
-spring.mail.password=${SPRING_MAIL_PASSWORD:muszahcaqthignup}
+# Email
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Cấu hình upload file
+# Upload
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 spring.servlet.multipart.enabled=true
 
-# MinIO Configuration - Sử dụng biến môi trường cho production
-minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
-minio.access-key=${MINIO_ACCESS_KEY:minioadmin}
-minio.secret-key=${MINIO_SECRET_KEY:MinIO2024!SecureStorage}
-minio.bucket-name=${MINIO_BUCKET_NAME:innovation-files}
+# MinIO
+minio.endpoint=${MINIO_ENDPOINT}
+minio.access-key=${MINIO_ACCESS_KEY}
+minio.secret-key=${MINIO_SECRET_KEY}
+minio.bucket-name=${MINIO_BUCKET_NAME}
 
-# Swagger/OpenAPI Configuration
+# Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 
-server.port=${PORT:8080}
-
+server.port=${PORT}
