--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,32 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+  # Jenkins CI/CD
+  jenkins:
+    build:
+      context: ./jenkins-config
+      dockerfile: Dockerfile
+    container_name: jenkins
+    ports:
+      - "8081:8080" # Jenkins web interface
+      - "50000:50000" # Jenkins agent port
+    environment:
+      JENKINS_OPTS: "--httpPort=8080"
+      JAVA_OPTS: "-Djenkins.install.runSetupWizard=false"
+      CASC_JENKINS_CONFIG: "/var/jenkins_home/casc_configs/jenkins.yaml"
+    volumes:
+      - jenkins_data:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock # Docker socket for building images
+      - /usr/bin/docker:/usr/bin/docker # Docker binary
+      - ./jenkins-config:/var/jenkins_home/casc_configs # Configuration as Code
+    user: root # Required for Docker access
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/login" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
   # libreoffice:
   #   image: lscr.io/linuxserver/libreoffice:latest
   #   container_name: libreoffice
@@ -110,6 +136,8 @@ volumes:
   redis_data:
     driver: local
   minio_data:
+    driver: local
+  jenkins_data:
     driver: local
   # libreoffice_data:
   #   driver: local
