--- a/jenkins-config/jenkins.yaml
+++ b/jenkins-config/jenkins.yaml
@@ -20,7 +20,7 @@ jenkins:
           - key: "DOCKER_HOST"
             value: "unix:///var/run/docker.sock"
           - key: "MAVEN_OPTS"
-            value: "-Xmx1024m -XX:MaxPermSize=256m"
+            value: "-Xmx1024m"
 
 tool:
   git:
