--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
 
   # Backend Application
   backend:
-    build: .
+    image: innovation-management-system-be:latest
     container_name: backend
     ports:
       - "8080:8080"
