--- a/jenkins-config/Dockerfile
+++ b/jenkins-config/Dockerfile
@@ -1,28 +1,20 @@
-# Jenkins Dockerfile with pre-installed plugins
+# Simple Jenkins Dockerfile
 FROM jenkins/jenkins:lts-jdk17
 
-# Switch to root to install additional packages
+# Switch to root to install packages
 USER root
 
-# Install Docker CLI, Maven, and other tools
+# Install essential tools
 RUN apt-get update && \
-    apt-get install -y \
-    docker.io \
-    maven \
-    curl \
-    wget \
-    git && \
+    apt-get install -y docker.io maven curl git && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Install Jenkins plugin CLI
-RUN jenkins-plugin-cli --version
-
-# Copy plugin list and install plugins
+# Install plugins
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
 
-# Copy configuration files
+# Copy configuration
 COPY jenkins.yaml /usr/share/jenkins/ref/casc/jenkins.yaml
 
 # Switch back to jenkins user
@@ -31,5 +23,3 @@ USER jenkins
 # Set environment variables
 ENV CASC_JENKINS_CONFIG=/var/jenkins_home/casc_configs/jenkins.yaml
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
-ENV MAVEN_HOME=/usr/share/maven
-ENV PATH=$PATH:$MAVEN_HOME/bin
