--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,41 @@ version: '3.8'
 
 services:
   # PostgreSQL Database
-#  postgres:
-#    image: postgres:15-alpine
-#    container_name: postgres
-#    ports:
-#      - "5432:5432"
-#    environment:
-#      POSTGRES_DB: innovation_management
-#      POSTGRES_USER: postgresADMIN
-#      POSTGRES_PASSWORD: InnovationSystemPostgresql!Secure!Quinton
-#      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
-#      - ./init-scripts:/docker-entrypoint-initdb.d
-#    restart: unless-stopped
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready -U postgres -d innovation_management" ]
-#      interval: 10s
-#      timeout: 5s
-#      retries: 5
-#
-#  # Redis Cache
-#  redis:
-#    image: redis:7-alpine
-#    container_name: redis
-#    ports:
-#      - "6379:6379"
-#    command: redis-server --appendonly yes --requirepass InnovationSystemRedis!Secure!Quinton
-#    volumes:
-#      - redis_data:/data
-#    restart: unless-stopped
-#    healthcheck:
-#      test: [ "CMD", "redis-cli", "ping" ]
-#      interval: 10s
-#      timeout: 5s
-#      retries: 5
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: innovation_management
+      POSTGRES_USER: postgresADMIN
+      POSTGRES_PASSWORD: InnovationSystemPostgresql!Secure!Quinton
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d innovation_management" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --requirepass InnovationSystemRedis!Secure!Quinton
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # MinIO Object Storage
   minio:
@@ -59,9 +59,9 @@ services:
       retries: 3
 
 volumes:
-#  postgres_data:
-#    driver: local
-#  redis_data:
-#    driver: local
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
   minio_data:
     driver: local
