Update template default

--- a/.gitignore
+++ b/.gitignore
@@ -33,12 +33,7 @@ build/
 .vscode/
 
 # RSA Keys - không commit keys lên git
-src/main/resources/
-*.pem
-*.key
-*.crt
-*.p12
-*.pfx
+src/main/resources/keys/*
 
 # Env file
 .env
