--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,12 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 
+# Database Seeder Configuration
+seeder.template.enabled=true
+seeder.template.force=false
+
+# SQL Import Configuration
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=true
+
 server.port=${PORT}
