Update DigitalSignature tmp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,15 @@ spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
 
 server.port=${PORT}
+
+# HSM Encryption Configuration (Academic Project)
+hsm.master.key=${HSM_MASTER_KEY:academic-project-master-key-2024}
+
+# Certificate Validation Configuration
+certificate.validation.enabled=true
+certificate.validation.check-expiration=true
+certificate.validation.check-revocation=false
+
+# Digital Signature Configuration
+digital.signature.algorithm=SHA256withRSA
+digital.signature.key.size=2048
