--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,7 +71,7 @@ spring.jpa.defer-datasource-initialization=true
 server.port=${PORT}
 
 # HSM Encryption Configuration (Academic Project)
-hsm.master.key=${HSM_MASTER_KEY:academic-project-master-key-2024}
+hsm.master.key=${HSM_MASTER_KEY}
 
 # Certificate Validation Configuration
 certificate.validation.enabled=true
