--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,6 +78,42 @@ certificate.validation.enabled=true
 certificate.validation.check-expiration=true
 certificate.validation.check-revocation=false
 
-# Digital Signature Configuration
-digital.signature.algorithm=SHA256withRSA
-digital.signature.key.size=2048
+# Digital Signature Configuration (Sử dụng chung cho Certificate)
+digital.signature.algorithm=${CA_CERTIFICATE_ALGORITHM:SHA256withRSA}
+digital.signature.key.size=${CA_CERTIFICATE_KEY_SIZE:2048}
+
+# CA Configuration
+ca.root.certificate=${CA_ROOT_CERTIFICATE}
+ca.certificate.validity.years=${CA_CERTIFICATE_VALIDITY_YEARS:1}
+ca.csr.processing.time.days=${CA_CSR_PROCESSING_TIME_DAYS:3-5}
+ca.blacklisted.users=${CA_BLACKLISTED_USERS:}
+
+# ===========================================
+# CERTIFICATE TEMPLATE CONFIGURATION
+# ===========================================
+
+# Certificate Template Data
+ca.certificate.template.data=${CA_CERTIFICATE_TEMPLATE_DATA}
+
+# Certificate Subject Information
+ca.certificate.subject.country=${CA_CERTIFICATE_SUBJECT_COUNTRY:VN}
+ca.certificate.subject.state=${CA_CERTIFICATE_SUBJECT_STATE:Annam Province}
+ca.certificate.subject.organization=${CA_CERTIFICATE_SUBJECT_ORGANIZATION:INNOVATION SUPPORT}
+ca.certificate.subject.organizational.unit=${CA_CERTIFICATE_SUBJECT_ORGANIZATIONAL_UNIT:Innovation Management}
+ca.certificate.subject.common.name=${CA_CERTIFICATE_SUBJECT_COMMON_NAME:Innovation CA Cert}
+
+# Certificate Validity
+ca.certificate.validity.days=${CA_CERTIFICATE_VALIDITY_DAYS:365}
+
+# Certificate Algorithm (Sử dụng chung với Digital Signature)
+ca.certificate.algorithm=${CA_CERTIFICATE_ALGORITHM:SHA256withRSA}
+ca.certificate.key.size=${CA_CERTIFICATE_KEY_SIZE:2048}
+ca.certificate.signature.algorithm=${CA_CERTIFICATE_SIGNATURE_ALGORITHM:SHA256withRSA}
+
+# Certificate Serial Number
+ca.certificate.serial.number.prefix=${CA_CERTIFICATE_SERIAL_NUMBER_PREFIX:CERT}
+ca.certificate.serial.number.length=${CA_CERTIFICATE_SERIAL_NUMBER_LENGTH:16}
+
+# Certificate Chain
+ca.certificate.chain.intermediate.enabled=${CA_CERTIFICATE_CHAIN_INTERMEDIATE_ENABLED:true}
+ca.certificate.chain.root.enabled=${CA_CERTIFICATE_CHAIN_ROOT_ENABLED:true}
