--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<!-- Spring Boot WebSocket - WebSocket support for real-time communication -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!-- ===== DATABASE & EXTERNAL LIBRARIES ===== -->
 
 		<!-- PostgreSQL Driver - Database connection -->
