--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,6 +70,10 @@ spring.jpa.defer-datasource-initialization=true
 
 server.port=${PORT}
 
+# Actuator Health Check
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 # HSM Encryption Configuration (Academic Project)
 hsm.master.key=${HSM_MASTER_KEY}
 
