Update Response FormData according to formtemplate

--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,18 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<!-- BouncyCastle for X.509 certificate generation -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.78.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk18on</artifactId>
+			<version>1.78.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
